--- a/ColorNumber/Views/Storyboard/Base.lproj/Main.storyboard
+++ b/ColorNumber/Views/Storyboard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xLU-wP-fxD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8P3-T0-oZW">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -280,16 +280,30 @@
             </objects>
             <point key="canvasLocation" x="-242" y="1074"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail Image Controller-->
         <scene sceneID="7El-nE-aGn">
             <objects>
-                <viewController id="8P3-T0-oZW" sceneMemberID="viewController">
+                <viewController id="8P3-T0-oZW" customClass="DetailImageController" customModule="ColorNumber" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2RO-8g-OCN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YcR-pK-2Hm">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="YcR-pK-2Hm" firstAttribute="leading" secondItem="OVE-b3-69x" secondAttribute="leading" id="1uz-PY-bXs"/>
+                            <constraint firstItem="YcR-pK-2Hm" firstAttribute="top" secondItem="OVE-b3-69x" secondAttribute="top" id="BWZ-Zp-mSO"/>
+                            <constraint firstItem="OVE-b3-69x" firstAttribute="bottom" secondItem="YcR-pK-2Hm" secondAttribute="bottom" id="aFJ-Rm-I2N"/>
+                            <constraint firstItem="OVE-b3-69x" firstAttribute="trailing" secondItem="YcR-pK-2Hm" secondAttribute="trailing" id="gRo-9d-5P6"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="OVE-b3-69x"/>
                     </view>
+                    <connections>
+                        <outlet property="scrollView" destination="YcR-pK-2Hm" id="HWE-6u-7SO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aWn-hY-oKL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
